flowc/tests/fixtures/resolve_e198_missing_effect.flow
type User = { id: string }

tool create_user(email: string) -> User

flow demo(User) -> User {
  u = create_user(email: it.id)
  u
}
